# MingDeng

./: .gitignore  AGENTS.md  API_COMPATIBILITY.md  API_CONFIG_GUIDE.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  TESTING.md  UPDATES.md  USAGE_GUIDE.md  build_desktop.bat  build_desktop.sh  index.html  package-lock.json  package.json  run_dev.bat  run_dev.sh  test_api.py
.github/workflows/: ci.yml  release.yml
backend/: main.py  requirements.txt
backend/core/: __init__.py  ai.py  backup_manager.py  config.py  library_manager.py  memory.py  paths.py  plan_generator.py  storage.py  todo_manager.py
mingdeng/: app.py  requirements.txt
mingdeng/components/: __init__.py
mingdeng/core/: __init__.py  ai.py  backup_manager.py  config.py  library_manager.py  memory.py  plan_generator.py  storage.py  todo_manager.py
mingdeng/views/: __init__.py  config.py  home.py  library.py  plan.py  stats.py
scripts/: sync-version.mjs
src/: index.html  main.js  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/pages/: calendar.html  library.html  plan.html  settings.html  stats.html  today.html
