[package]
name = "mingdeng"
version = "0.2.0"
description = "MingDeng - lightweight AI learning assistant"
authors = ["MingDeng Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.13"
